# SpaceVILJava

./: .gitignore  README.md
sandbox/app/: build.gradle
sandbox/app/src/main/java/sandbox/: App.java
sandbox/app/src/main/java/sandbox/View/: MainWindow.java
sandbox/app/src/main/java/sandbox/View/Components/: BlockNote.java  ClickablesAndTogglesView.java  ComponentsFactory.java  ContainersView.java  CustomElementsView.java  EffectsView.java  EventItem.java  EventsAndRoutingView.java  FreeAreaView.java  JSonLayoutView.java  JSonWindow.java  MenusPopupsAndTooltipsView.java  PerformanceView.java  SlidersAndProgressBarsView.java  StyleExampleView.java  TextAndInputView.java  TextContentListWrapper.java  VisualContact.java  WindowsAndDialogsView.java  WorkWithImagesView.java
sandbox/app/src/main/java/sandbox/View/Decorations/: ImageResources.java  Palette.java  StyleFactory.java
sandbox/app/src/main/java/sandbox/View/json/: ItemsFactory.java  JsonApplier.java  JsonTextParser.java
spacevil/: build.gradle  compile-linux.sh  compile-mac.sh  compile-win.bat  compile_win.bat  settings.gradle
spacevil/src/main/java/com/spvessel/spacevil/: ComboBox.java  FontEngine.java  GLWHandler.java  ListArea.java  ListBox.java  LoadingScreen.java  PasswordLine.java  RadioButton.java  SideArea.java  Tab.java  TabBar.java  TextView.java  VisualItem.java
spacevil/src/main/java/com/spvessel/spacevil/Common/: CommonService.java  DefaultsService.java  NativeLibrary.java
spacevil/src/main/java/com/spvessel/spacevil/Decorations/: Style.java
spacevil/src/main/java/com/spvessel/spacevil/internal/Wrapper/: Hint.java
spacevil/src/main/native/linux/: CMakeLists.txt
spacevil/src/main/native/macos/: CMakeLists.txt
spacevil/src/main/native/windows/: CMakeLists.txt
